SET( PROJECT "dispatch" )
SET( TARGET_NAME comma_${PROJECT} )

FILE( GLOB source ${SOURCE_CODE_BASE_DIR}/${PROJECT}/*.cpp )
FILE( GLOB includes ${SOURCE_CODE_BASE_DIR}/${PROJECT}/*.h )
SOURCE_GROUP( ${PROJECT} FILES ${source} ${includes} )
ADD_CUSTOM_TARGET( ${TARGET_NAME} ${source} ${includes} )
ADD_DEPENDENCIES( ${TARGET_NAME} comma_base )

INSTALL( FILES ${includes} DESTINATION ${CMAKE_INSTALL_PREFIX}/${comma_INSTALL_INCLUDE_DIR}/${PROJECT} )

IF( comma_BUILD_TESTS )
    ADD_SUBDIRECTORY( test )
ENDIF( comma_BUILD_TESTS )
