SET( PROJECT "csv" )
SET( TARGET_NAME comma_${PROJECT} )
SET( dir ${SOURCE_CODE_BASE_DIR}/${PROJECT} )

FILE( GLOB source ${dir}/*.cpp )
FILE( GLOB includes ${dir}/*.h ) 
FILE( GLOB impl_includes ${dir}/impl/*.h )

SOURCE_GROUP( ${TARGET_NAME} FILES ${source} ${includes} ${impl_includes} )

ADD_LIBRARY( ${TARGET_NAME} ${source} ${includes} ${impl_includes} )
SET_TARGET_PROPERTIES( ${TARGET_NAME} PROPERTIES ${comma_LIBRARY_PROPERTIES} )
TARGET_LINK_LIBRARIES( ${TARGET_NAME} comma_string ${comma_ALL_EXTERNAL_LIBRARIES} )
# todo TARGET_LINK_LIBRARIES( ${TARGET_NAME} comma_timing )

INSTALL( FILES ${includes} DESTINATION ${CMAKE_INSTALL_PREFIX}/${comma_INSTALL_INCLUDE_DIR}/${PROJECT}/ )
INSTALL( FILES ${impl_includes} DESTINATION ${CMAKE_INSTALL_PREFIX}/${comma_INSTALL_INCLUDE_DIR}/${PROJECT}/Impl )
INSTALL(
    TARGETS ${TARGET_NAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/${comma_INSTALL_BIN_DIR} COMPONENT Runtime     # .exe, .dll
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${comma_INSTALL_LIB_DIR} COMPONENT Runtime     # .so, mod.dll
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/${comma_INSTALL_LIB_DIR} COMPONENT Development # .a, .lib
)

IF(BUILD_APPLICATIONS)
    #ADD_SUBDIRECTORY( applications )
ENDIF(BUILD_APPLICATIONS)

IF( comma_BUILD_TESTS )
    ADD_SUBDIRECTORY( test )
ENDIF( comma_BUILD_TESTS )
