SET( dir ${SOURCE_CODE_BASE_DIR}/Csv/Applications )
FILE( GLOB source   ${dir}/*.cpp)
FILE( GLOB includes ${dir}/*.h)
SOURCE_GROUP( ${TARGET_NAME} FILES ${source} ${includes} )

ADD_EXECUTABLE( csv-size ${dir}/csv-size.cpp )
ADD_EXECUTABLE( csv-bin-cut ${dir}/csv-bin-cut.cpp )
ADD_EXECUTABLE( csv-join ${dir}/csv-join.cpp )
ADD_EXECUTABLE( csv-paste ${dir}/csv-paste.cpp )
ADD_EXECUTABLE( csv-make-blocks ${dir}/csv-make-blocks.cpp )
ADD_EXECUTABLE( csv-split ${dir}/csv-split.cpp ${dir}/Split/Split.cpp ${dir}/Split/Split.h )
ADD_EXECUTABLE( csv-time ${dir}/csv-time.cpp )
ADD_EXECUTABLE( csv-time-delay ${dir}/csv-time-delay.cpp )
ADD_EXECUTABLE( csv-time-join ${dir}/csv-time-join.cpp )
ADD_EXECUTABLE( csv-time-stamp ${dir}/csv-time-stamp.cpp )
ADD_EXECUTABLE( csv-to-bin ${dir}/csv-to-bin.cpp )
ADD_EXECUTABLE( csv-from-bin ${dir}/csv-from-bin.cpp )
ADD_EXECUTABLE( csv-calc ${dir}/csv-calc.cpp )
ADD_EXECUTABLE( csv-crc ${dir}/csv-crc.cpp )
ADD_EXECUTABLE( csv-play ${dir}/csv-play.cpp ${dir}/Play/Multiplay.cpp )
ADD_EXECUTABLE( csv-thin ${dir}/csv-thin.cpp )

TARGET_LINK_LIBRARIES ( csv-size ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkString ArkCsv )
TARGET_LINK_LIBRARIES ( csv-bin-cut ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkString ArkCsv ArkXPath )
TARGET_LINK_LIBRARIES ( csv-split ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkString ArkCsv ArkXPath )
TARGET_LINK_LIBRARIES ( csv-join ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkCsv ArkIo ArkXPath ArkString )
TARGET_LINK_LIBRARIES ( csv-paste ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkString ArkCsv ArkIo )
TARGET_LINK_LIBRARIES ( csv-make-blocks ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkCsv ArkXPath ArkString )
TARGET_LINK_LIBRARIES ( csv-time ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkTiming )
TARGET_LINK_LIBRARIES ( csv-time-delay ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkCsv ArkString ArkXPath )
TARGET_LINK_LIBRARIES ( csv-time-join ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkCsv ArkIo ArkString ArkXPath )
TARGET_LINK_LIBRARIES ( csv-time-stamp ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkCsv ArkString )
TARGET_LINK_LIBRARIES ( csv-to-bin ${Ark_ALL_EXTERNAL_LIBRARIES} ArkCsv ArkXPath ArkApplication )
TARGET_LINK_LIBRARIES ( csv-from-bin ${Ark_ALL_EXTERNAL_LIBRARIES} ArkCsv ArkXPath ArkApplication )
TARGET_LINK_LIBRARIES ( csv-calc ${Ark_ALL_EXTERNAL_LIBRARIES} ArkCsv ArkXPath ArkApplication ArkString )
TARGET_LINK_LIBRARIES ( csv-crc ${Ark_ALL_EXTERNAL_LIBRARIES} ArkCsv ArkXPath ArkApplication ArkString )
TARGET_LINK_LIBRARIES ( csv-play ${Ark_ALL_EXTERNAL_LIBRARIES} ArkCsv ArkXPath ArkApplication ArkIo )
TARGET_LINK_LIBRARIES ( csv-thin ${Ark_ALL_EXTERNAL_LIBRARIES} ArkApplication ArkIo )
                  
INSTALL( TARGETS csv-bin-cut csv-join csv-paste csv-make-blocks csv-split csv-time csv-time-delay csv-time-join csv-time-stamp csv-to-bin csv-from-bin csv-size csv-calc csv-play csv-crc csv-thin
         RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/${Ark_INSTALL_BIN_DIR}
         COMPONENT Runtime )
